--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,10 @@ services:
     env_file:
       - .env
     environment:
-      # Time-zone helps with cron nodes & logs
       - TZ=America/Lima
+
+      # - NODE_FUNCTION_ALLOW_EXTERNAL="@xmldom/xmldom"
+      # - NODE_PATH="/home/node/.n8n/node_modules"
 
       # ---------- DATABASE (pick ONE block) ----------
       # 1. Keep default SQLite (good for quick local dev)
@@ -27,7 +29,7 @@ services:
       # - DB_POSTGRESDB_USER=n8n
       # - DB_POSTGRESDB_PASSWORD_FILE=/run/secrets/postgres_password
     volumes:
-      - data:/home/node/.n8n
+      - n8n_data:/home/node/.n8n
     # depends_on:
       # - db           # becomes a no-op if you stay on SQLite
 
@@ -50,6 +52,8 @@ services:
   #     retries: 5
 
 volumes:
-  data:
+  n8n_data:
+    external: true
+    name: n8n_data
   # postgres_data:
 
