feat: enhance n8n deployment with Traefik integration and updated configurations
- Add Traefik as a reverse proxy for SSL termination and automatic certificate management
- Update .env.example with new environment variables for domain and SSL configuration
- Revise CLAUDE.md and README.md to reflect changes in architecture and setup instructions
- Introduce Makefile for simplified management of n8n services and community node installations
- Update Dockerfile.n8n to pin n8n version to 1.104.2 for stability
- Remove deprecated init.sh script and replace with community node installation script

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+# n8n
+DOMAIN_NAME=
+SUBDOMAIN=
+GENERIC_TIMEZONE=America/Lima
+TZ=America/Lima
+SSL_EMAIL=
+
+# LangSmith
 LANGSMITH_ENDPOINT=https://api.smith.langchain.com
 LANGSMITH_TRACING_V2=true
 LANGSMITH_API_KEY=
